# ATM

./: CMakeLists.txt  README.md
app/: app.c  app.h  main.c
card/: card.c  card.h
filehandling/: filehandling.c  filehandling.h
libraries/: libraries.h
linked_list/: linked_list.c  linked_list.h  struct.h
program/: program.c  program.h
server/: server.c  server.h
terminal/: terminal.c  terminal.h
validations/: validations.c  validations.h
